kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderflow-backend
  namespace: orderflow
spec:
  replicas: 2

  selector:
    matchLabels:
      app: orderflow-backend

  template:
    metadata:
      labels:
        app: orderflow-backend

    spec:
      containers:
        - name: backend
          image: 556988669532.dkr.ecr.us-east-1.amazonaws.com/orderflow-backend:v2
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
