kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orderflow-frontend
  namespace: orderflow

spec:
  type: LoadBalancer

  selector:
    app: orderflow-frontend

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
